# engineering-prac-ml

./: README.md  dvc.yaml  pyproject.toml
.dvc/: config
hw1/: .gitignore  .pre-commit-config.yaml  README.md  hw4.ipynb  linting.md  pyproject.toml  requirements.txt  setup.cfg
hw1/data/: .gitignore  best_clusters.png.dvc  best_moons.png.dvc  clusters.png.dvc  moons.png.dvc
hw1/scripts/: basic_perceptron.py  best_perceptron.py  main.py  util.py
